@@ -19,4 +19,8 @@ FROM openjdk:8-jre
 WORKDIR /root/
 COPY --from=BUILD_IMAGE /root/dev/dutch-treat/build/libs/*-all.jar app.jar
 EXPOSE 8080
-CMD ["java","-jar","app.jar"]
+CMD ["java", "-server", "-XX:+UnlockExperimentalVMOptions", \
+     "-XX:+UseCGroupMemoryLimitForHeap", "-XX:InitialRAMFraction=2", \
+     "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC", \
+     "-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", \
+     "-jar","app.jar"]
